[package]
name = "hank-sync"
version = "0.1.0"
edition = "2024"
description = "Minimal QUIC-based file sync tool"
authors = ["Glan & Hank"]

[dependencies]
# QUIC
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.13"

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# File handling
walkdir = "2"
blake3 = "1"
bytes = "1"

# Utilities
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"

[[bin]]
name = "hank-sync"
path = "src/main.rs"
